# Claude-Usage-Tracker-Windows

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  cliff.toml  index.html  package-lock.json  package.json  tsconfig.json
.claude/phases/: README.md
.claude/phases/External-integration-public-side/: HANDOFF.md  Phase-1.md  Phase-3.md  Phase-5.md  README.md
.claude/phases/Nightly-task-triage/: HANDOFF.md  Phase-2.md  Phase-3.md  Phase-4.md  README.md
.claude/phases/Phases-feature/: Phase-2.md  Phase-3.md  Phase-4.md  Phase-5.md  README.md
.claude/skills/chat-retro/: SKILL.md
.claude/skills/phases/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: corrections-contract.md  corrections-integration.md  forecast.md  nightly-triage.md  task-pipeline.md
docs/archive/phases/External-integration-public-side/: Phase-2.md  Phase-4.md  Phase-6.md
docs/archive/phases/Nightly-task-triage/: HANDOFF.md  Phase-1.md  Phase-2.md  Phase-3.md
docs/archive/phases/Phases-feature/: Phase-1.md  Phase-3.md  Phase-5.md
docs/plans/: external-integration-contract.md  external-integration.md
docs/specs/: README.md  tasks.md  usage-tracker.md
resolver/: .gitignore  Cargo.toml  README.md
resolver/src/: auth.rs  config.rs  lib.rs  main.rs  model.rs  routes.rs  store.rs
resolver/tests/: http.rs
scripts/: bump-version.mjs  cc-phases.mjs  cc-todos-hook.mjs  cc-todos.mjs  cli.mjs  triage-prompt.md
scripts/cli/: corrections.mjs  hook.mjs  phases.mjs  plan-hook.mjs  plan-hook.test.mjs  settings.mjs  stop-hook.mjs  stop-hook.test.mjs  task-cost.mjs  task-cost.test.mjs  todos.mjs  todos.test.mjs  triage.mjs
src/: App.vue  alertFormat.test.ts  alertFormat.ts  alerts.ts  changelog.test.ts  changelog.ts  dashboardSections.ts  dateFormat.ts  externalStatus.ts  fontSwitch.ts  hotkeys.ts  i18n.ts  insightKinds.ts  logging.ts  main.ts  projectGroups.ts  projectLinks.ts  settingsStore.ts  style.css  thresholds.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json  tauri.conf.preview.json
src-tauri/capabilities/: default.json
src-tauri/src/: alerts.rs  cc.rs  corrections.rs  domain.rs  enroll.rs  external.rs  identity.rs  lib.rs  main.rs  memory.rs  phases.rs  project_groups.rs  report.rs  stats.rs  status.rs  sysmon.rs  task_cost.rs  todos.rs  triage.rs  triage_schedule.rs  usage.rs
src-tauri/src/alerts/: config.rs  engine.rs  mod.rs  util.rs
src-tauri/src/stats/: analytics.rs  cc_store.rs  forecast.rs  mod.rs  project_links.rs  snapshots.rs
src-tauri/tests/: ingest_e2e.rs
src-tauri/tests/fixtures/projects/proj-a/: session-1.jsonl
src-tauri/tests/fixtures/projects/proj-b/: session-2.jsonl
src-tauri/windows/: hooks.nsh
src/components/: AboutPanel.vue  AnalyticsPanel.vue  AnalyticsWindow.vue  EnrollmentPanel.vue  FocusControls.vue  GraphView.vue  MiniPanel.vue  ProjectAutocomplete.vue  ProjectLabel.vue  ServiceStatusBar.vue  SettingsPanel.vue  SettingsWindow.vue  TodoWindow.vue  UsagePanel.vue
src/insightHelp/: bash_heavy.ru.md  bloated_session.ru.md  cache_churn.ru.md  cold_restarts.ru.md  cold_rewrites.ru.md  expensive_session.ru.md  idle_cache_gap.ru.md  index.ts  render.ts
src/styles/fonts/: fira-code.css  jetbrains-mono.css  montserrat.css
