[package]
name = "claude-usage-tracker"
version = "0.12.0"
description = "Claude AI Usage Tracker for Windows"
authors = ["Damir Sadykov <damir.it.work@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "claude_usage_tracker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
# Only the `system` feature: read global CPU + RAM. No disk/network/process
# scanning — keeps the binary small and avoids behavioural-AV-sensitive calls.
sysinfo = { version = "0.39.3", default-features = false, features = ["system"] }
# External-integration device identity (plan External-integration-public-side, phase 2):
# pure ed25519 math + OS RNG + base64 — no crypto-protect syscalls, so the
# behavioural-AV surface stays as above. At-rest key sealing (phase 2.2) is a
# separate decision behind `identity::SecretStore`.
ed25519-dalek = "2"
getrandom = "0.2"
base64 = "0.22"

# DPAPI (CryptProtectData) for at-rest sealing of the device private key
# (identity::DpapiStore, phase 2.2). Windows-only; tauri already pulls windows-sys
# transitively, so the marginal cost is just the enabled feature set.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
] }
